8282511: Use fixed certificate validation date in SSLExampleCert template